# horus-harness

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  codex-plan-review.md  plan.md  product_interview.md  pyproject.toml  stale-freshness-probe.txt
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: continuity.yml  install-smoke.yml  publish.yml  tests.yml
.horus/: .gitignore  PRD.md  README.md  decisions.md  execution.md  features.md  history.md  project.md  proxy-session-rescue.md  roadmap.md
.horus/archive/: features.md
.horus/audits/: 2026-07-16-product.md  2026-07-19-skill-scope-cards.md  2026-07-20-product.md
.horus/backlog/: account-login-verb.md  account-scoped-usage-check.md  account-settings-sync.md  accounts-refresh-button-invisible.md  app-usage-cost-opacity.md  attachable-detached-worker-run.md  audit-advisory-interval.md  auto-merge-bypasses-freshness-gate.md  autonomous-activity-timeline.md  autonomous-advisory-dispatch-posture.md  autotest-e2e-away-mode-drill.md  backlog-default-list.md  backlog-deferred-disposition.md  backlog-librarian.md  backlog-readiness-disposition.md  benchmark-platforms-grounding.md  boundary-based-continuity-granularity.md  bulk-migration-inventory-reconciliation.md  campaign-supervision-launch.md  capability-catalog-productionize.md  close-check-unclassified-cards-advisory.md  codex-identity-guard.md  (+172 more)
bugs/: checkpoint-warning-after-artifact-refresh.md  deploy-hosted-silent-stale-version.md  horus-app-singleton-lock-wedges-silently.md  refresh-artifacts-leaves-dirty-worktree.md
design/: Horus Dashboard.html  README.md
docs/: away-mode-rehearsal.md  machine-requirements.md  routines.md  structure-test-2026-07-03.html  terminal-mobile-desktop-diagnosis.md
horus/: __init__.py  __main__.py  access_gate.py  activity.py  backend.py  backlog.py  backlog_migrate.py  backlog_tree.py  batch.py  brainstorm.py  cache_status.py  capabilities.py  claude_usage.py  cli.py  closure.py  codex_usage.py  companion.py  config.py  continuity.py  dashboard.py  datums.py  delivery.py  doctor_machine.py  envelope.py  fetchcheck.py  fleet_backlog.py  fleet_review.py  frontmatter.py  github_catalog.py  gitstate.py  infer.py  initialize.py  input_bridge.py  instructions.py  integration.py  keepwarm.py  launch.py  launcher.py  machine_requirements.py  markdown.py  (+41 more)
research/: README.md  field-findings-2026-07-08-fabric.md  horus-hub-design.md  omnigent-fit-2026-07-10.md  omnigent.md  openwiki-comparison-2026-07.md  pywebview.md  rulesync.md
scripts/: deploy-hosted.sh  regen_mascot.py
tests/: __init__.py  access_fixtures.py  test_access_gate.py  test_account_isolation.py  test_account_resolution.py  test_activity.py  test_adapters.py  test_backend.py  test_backlog.py  test_backlog_migrate.py  test_backlog_tree.py  test_batch.py  test_brainstorm.py  test_cache_status.py  test_capabilities.py  test_checkpoint_hook.py  test_claude_adapter.py  test_claude_usage.py  test_cli.py  test_closure.py  test_codex_adapter.py  test_codex_usage.py  test_companion.py  test_config.py  test_config_dir_guard.py  test_continuity_workflow.py  test_dashboard.py  test_dashboard_access.py  test_datums.py  test_delivery.py  test_deploy_hosted.py  test_doctor_advisories.py  test_doctor_machine.py  test_envelope.py  test_fetchcheck.py  test_fleet_backlog.py  test_fleet_review.py  test_frontmatter.py  test_github_catalog.py  test_gitstate.py  (+55 more)
(+181 files in other folders)
