[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-harness"
version = "0.0.1"
description = "Project-centric continuity and control panel for official coding-agent CLIs"
readme = "plan.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
horus = "horus.cli:main"

[tool.setuptools.packages.find]
include = ["horus*"]
