[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-harness"
version = "0.0.2"
description = "Project-centric continuity and control panel for official coding-agent CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Rafael M. J. Figueiredo" }]
keywords = ["claude-code", "codex", "coding-agents", "continuity", "cli", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rafaelmjf/horus-harness"
Repository = "https://github.com/rafaelmjf/horus-harness"
Issues = "https://github.com/rafaelmjf/horus-harness/issues"

[project.scripts]
horus = "horus.cli:main"

[tool.setuptools.packages.find]
include = ["horus*"]

[tool.setuptools.package-data]
horus = ["assets/*.png"]
