[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-harness"
version = "0.0.62"
description = "Project continuity layer for coding-agent CLIs (Claude Code, Codex): repo-local memory, backlog, and closure rituals any agent can pick up"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Rafael M. J. Figueiredo" }]
keywords = ["claude-code", "codex", "coding-agents", "continuity", "cli", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
# Windows has no stdlib pseudo-console binding, so the in-app terminal needs
# pywinpty there (ConPTY). macOS/Linux use the stdlib `pty` module — no dep.
dependencies = [
    "prompt-toolkit>=3.0,<4",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/rafaelmjf/horus-harness"
Repository = "https://github.com/rafaelmjf/horus-harness"
Issues = "https://github.com/rafaelmjf/horus-harness/issues"

[project.scripts]
horus = "horus.cli:main"

[tool.setuptools.packages.find]
include = ["horus*"]

[tool.setuptools.package-data]
horus = ["assets/*.png", "assets/*.ico", "assets/vendor/xterm/*"]
